Added gender search picker. Fixed bug calculating chat bubble size. Show next image when tapping in profile view

--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -169,6 +169,61 @@
             </objects>
             <point key="canvasLocation" x="5197.5" y="-781.69014084507046"/>
         </scene>
+        <!--Check List View Controller-->
+        <scene sceneID="va1-k7-og4">
+            <objects>
+                <viewController id="6aQ-zl-sfP" customClass="GZECheckListViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="31k-r1-IOP"/>
+                        <viewControllerLayoutGuide type="bottom" id="pro-EQ-aw3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BtI-tT-ec4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="7ip-qC-Rcx">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zZ2-W4-Q35" customClass="GZECheckListCollectionView" customModule="Gooze" customModuleProvider="target">
+                                <rect key="frame" x="16" y="20" width="288" height="548"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xIK-sV-NXa">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="NW7-R3-rxM">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zZ2-W4-Q35" firstAttribute="leading" secondItem="BtI-tT-ec4" secondAttribute="leadingMargin" id="2Km-iS-t5d"/>
+                            <constraint firstItem="pro-EQ-aw3" firstAttribute="top" secondItem="zZ2-W4-Q35" secondAttribute="bottom" id="8FA-2D-RtL"/>
+                            <constraint firstItem="zZ2-W4-Q35" firstAttribute="top" secondItem="31k-r1-IOP" secondAttribute="bottom" id="Gba-sw-Ttt"/>
+                            <constraint firstAttribute="trailing" secondItem="7ip-qC-Rcx" secondAttribute="trailing" id="Or5-1i-neH"/>
+                            <constraint firstItem="zZ2-W4-Q35" firstAttribute="trailing" secondItem="BtI-tT-ec4" secondAttribute="trailingMargin" id="cgl-K7-RMI"/>
+                            <constraint firstItem="pro-EQ-aw3" firstAttribute="top" secondItem="7ip-qC-Rcx" secondAttribute="bottom" id="jJZ-WK-cPx"/>
+                            <constraint firstItem="7ip-qC-Rcx" firstAttribute="top" secondItem="BtI-tT-ec4" secondAttribute="top" id="kiV-lL-qEh"/>
+                            <constraint firstItem="7ip-qC-Rcx" firstAttribute="leading" secondItem="BtI-tT-ec4" secondAttribute="leading" id="pPK-7H-5Fo"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="checkList" destination="zZ2-W4-Q35" id="2SX-XF-Yd8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mv4-iI-Cvd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6009.375" y="-1530.6338028169014"/>
+        </scene>
         <!--Sign Up Profile View Controller-->
         <scene sceneID="12C-BY-X7T">
             <objects>
@@ -191,7 +246,7 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P9F-hy-S2v">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="519.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="587.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KCl-Tg-zlh">
                                                 <rect key="frame" x="114.5" y="24.5" width="91" height="21.5"/>
@@ -355,14 +410,24 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hb-Tp-aCh" customClass="GZELabel" customModule="Gooze" customModuleProvider="target">
+                                                <rect key="frame" x="10" y="526.5" width="300" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="tnc-0w-Ct1"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yjq-v4-s2f">
-                                                <rect key="frame" x="0.0" y="518.5" width="320" height="1"/>
+                                                <rect key="frame" x="0.0" y="586.5" width="320" height="1"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="xm3-oo-MI5"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
                                         <constraints>
+                                            <constraint firstItem="7Hb-Tp-aCh" firstAttribute="top" secondItem="8Dl-mu-l4g" secondAttribute="bottom" constant="8" id="2OJ-uU-l47"/>
                                             <constraint firstAttribute="trailing" secondItem="s75-Qo-WNT" secondAttribute="trailing" constant="10" id="6Yz-S8-72C"/>
                                             <constraint firstItem="s75-Qo-WNT" firstAttribute="top" secondItem="f84-C9-1rK" secondAttribute="bottom" constant="8" id="74e-26-k7m"/>
                                             <constraint firstItem="ncm-nO-qGJ" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="8Ba-EG-eHS"/>
@@ -378,10 +443,11 @@
                                             <constraint firstAttribute="trailing" secondItem="f84-C9-1rK" secondAttribute="trailing" constant="10" id="H2i-aa-41C"/>
                                             <constraint firstItem="lPV-Fn-VPs" firstAttribute="top" secondItem="u7D-UY-3ik" secondAttribute="bottom" constant="25" id="HuJ-S9-wjJ"/>
                                             <constraint firstItem="heQ-9F-cZe" firstAttribute="top" secondItem="aot-uf-DTC" secondAttribute="top" id="IOL-uT-Ivs"/>
-                                            <constraint firstItem="Yjq-v4-s2f" firstAttribute="top" secondItem="8Dl-mu-l4g" secondAttribute="bottom" id="JWl-lA-EQE"/>
+                                            <constraint firstItem="Yjq-v4-s2f" firstAttribute="top" secondItem="7Hb-Tp-aCh" secondAttribute="bottom" constant="30" id="JWl-lA-EQE"/>
                                             <constraint firstItem="heQ-9F-cZe" firstAttribute="leading" secondItem="aot-uf-DTC" secondAttribute="leading" id="KAf-nm-AsK"/>
                                             <constraint firstItem="u7D-UY-3ik" firstAttribute="top" secondItem="Fxf-KV-xlD" secondAttribute="bottom" constant="8" id="KXr-05-7FD"/>
                                             <constraint firstItem="heQ-9F-cZe" firstAttribute="bottom" secondItem="aot-uf-DTC" secondAttribute="bottom" id="Kfp-sf-Aem"/>
+                                            <constraint firstAttribute="trailing" secondItem="7Hb-Tp-aCh" secondAttribute="trailing" constant="10" id="LEM-xK-IUj"/>
                                             <constraint firstAttribute="trailing" secondItem="aot-uf-DTC" secondAttribute="trailing" id="MX9-xO-y0V"/>
                                             <constraint firstItem="lPV-Fn-VPs" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="OLm-E2-aBO"/>
                                             <constraint firstItem="DtZ-yg-d4a" firstAttribute="centerX" secondItem="aot-uf-DTC" secondAttribute="centerX" id="OLq-aZ-kjE"/>
@@ -398,6 +464,7 @@
                                             <constraint firstItem="u7D-UY-3ik" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="8" id="YVP-lm-vd8"/>
                                             <constraint firstItem="hKA-po-iEq" firstAttribute="trailing" secondItem="WH8-fE-Qza" secondAttribute="trailing" id="aMx-u5-k9n"/>
                                             <constraint firstItem="WH8-fE-Qza" firstAttribute="trailing" secondItem="aot-uf-DTC" secondAttribute="trailing" id="azx-qi-Vtw"/>
+                                            <constraint firstItem="7Hb-Tp-aCh" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="c3M-QA-yO7"/>
                                             <constraint firstAttribute="trailing" secondItem="u7D-UY-3ik" secondAttribute="trailing" constant="8" id="cGW-6R-nvH"/>
                                             <constraint firstItem="Yjq-v4-s2f" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" id="cvq-uh-ncd"/>
                                             <constraint firstItem="8Dl-mu-l4g" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="ehg-g5-05r"/>
@@ -489,12 +556,14 @@
                         <outlet property="saveButton" destination="aAw-J3-Lhi" id="wtN-bi-slI"/>
                         <outlet property="scrollContentView" destination="P9F-hy-S2v" id="Lfi-D0-puH"/>
                         <outlet property="scrollView" destination="jgt-hf-4Co" id="ljb-rO-ZEL"/>
+                        <outlet property="searchForGenderLabel" destination="7Hb-Tp-aCh" id="DsI-fa-c69"/>
                         <outlet property="skipButton" destination="57Y-zh-rU7" id="pje-3a-aae"/>
                         <outlet property="usernameContainer" destination="KCl-Tg-zlh" id="nQd-Bl-HRW"/>
                         <outlet property="usernameLabel" destination="wRD-Ba-vpg" id="iNu-BU-G8f"/>
                         <outlet property="viewBottomSpaceConstraint" destination="Tp7-sw-9zQ" id="KW1-3e-O59"/>
                         <outlet property="weightTextField" destination="ncm-nO-qGJ" id="ovF-DE-fEA"/>
                         <segue destination="66d-od-zfu" kind="show" identifier="profileToPhotoEditSegue" id="e66-sX-XQT"/>
+                        <segue destination="6aQ-zl-sfP" kind="show" identifier="segueToSearchGenderPicker" id="IoA-Np-Ja4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8wG-9B-PQp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -560,14 +629,14 @@
                                                     <constraint firstItem="Hrr-d4-hZE" firstAttribute="height" secondItem="EDr-zq-fLO" secondAttribute="height" multiplier="0.53" id="oyL-vP-z6S"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rN4-C7-erW" customClass="GZEButton" customModule="Gooze" customModuleProvider="target">
-                                                <rect key="frame" x="137" y="498" width="46" height="30"/>
-                                                <state key="normal" title="Button"/>
-                                            </button>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9e2-Dw-qta" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="274" width="320" height="274"/>
                                                 <color key="tintColor" red="0.069920279309640565" green="0.56393771701388884" blue="0.51631973187128699" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rN4-C7-erW" customClass="GZEButton" customModule="Gooze" customModuleProvider="target">
+                                                <rect key="frame" x="137" y="498" width="46" height="30"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="EDr-zq-fLO" secondAttribute="trailing" id="3Wy-Bp-Myf"/>
@@ -1557,8 +1626,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="Alr-vg-DKr">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xcj-iX-hX9" userLabel="user-bg-image">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFill" image="city_noir_by_lightzone-d3dknd2" translatesAutoresizingMaskIntoConstraints="NO" id="xcj-iX-hX9" userLabel="user-bg-image">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KYB-LL-jXh">
                                 <rect key="frame" x="0.0" y="64" width="320" height="469"/>
@@ -1654,7 +1723,7 @@
                             <constraint firstItem="KYB-LL-jXh" firstAttribute="top" secondItem="p7d-ob-vnO" secondAttribute="bottom" id="0Br-jU-b20"/>
                             <constraint firstItem="Alr-vg-DKr" firstAttribute="leading" secondItem="4Eg-af-7Vm" secondAttribute="leading" id="2xL-qN-mKl"/>
                             <constraint firstAttribute="trailing" secondItem="Alr-vg-DKr" secondAttribute="trailing" id="4pL-Hj-0Qj"/>
-                            <constraint firstItem="xcj-iX-hX9" firstAttribute="top" secondItem="p7d-ob-vnO" secondAttribute="bottom" id="Bik-bB-jWD"/>
+                            <constraint firstItem="xcj-iX-hX9" firstAttribute="top" secondItem="4Eg-af-7Vm" secondAttribute="top" id="BzG-jA-yzO"/>
                             <constraint firstAttribute="trailing" secondItem="cnS-1k-LUP" secondAttribute="trailing" id="Gad-ne-ANZ"/>
                             <constraint firstItem="Zyn-UR-ztN" firstAttribute="top" secondItem="cnS-1k-LUP" secondAttribute="bottom" id="Klo-ci-QJD"/>
                             <constraint firstItem="ATA-Lh-gmd" firstAttribute="bottom" secondItem="cnS-1k-LUP" secondAttribute="bottom" id="Nlj-rh-9Ba"/>
@@ -3226,6 +3295,7 @@
         <image name="camera-153-icon" width="52" height="40"/>
         <image name="camera-white-icon" width="52" height="40"/>
         <image name="chat-send-button" width="15" height="21"/>
+        <image name="city_noir_by_lightzone-d3dknd2" width="1032" height="774"/>
         <image name="gooze-logo-1" width="119" height="154"/>
         <image name="gooze-text" width="120" height="37"/>
         <image name="main-background" width="750" height="1334"/>
@@ -3238,7 +3308,7 @@
         <image name="searching-radius-small" width="210" height="210"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="aoX-cG-RKK"/>
+        <segue reference="ado-a7-Lxa"/>
         <segue reference="ZKk-02-86h"/>
         <segue reference="XJg-fM-c9J"/>
         <segue reference="be1-y5-0kc"/>
