--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -185,7 +185,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zZ2-W4-Q35" customClass="GZECheckListCollectionView" customModule="Gooze" customModuleProvider="target">
-                                <rect key="frame" x="16" y="20" width="288" height="548"/>
+                                <rect key="frame" x="16" y="64" width="288" height="504"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xIK-sV-NXa">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -237,13 +237,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbO-Sj-Jkc">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="cCx-TY-NnN">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jgt-hf-4Co">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P9F-hy-S2v">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="587.5"/>
@@ -712,13 +712,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dO2-in-Qrd">
-                                <rect key="frame" x="0.0" y="20" width="320" height="348"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="304"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.20000000000000001" maximumZoomScale="5" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B1l-1m-VOV">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="348"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="304"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4hT-lE-ril">
-                                                <rect key="frame" x="0.0" y="0.0" width="320" height="348"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="304"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
@@ -731,23 +731,23 @@
                                         </constraints>
                                     </scrollView>
                                     <view clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n3U-KK-ELb">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="348"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="304"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wOa-CL-T0W">
-                                        <rect key="frame" x="-14" y="0.0" width="348" height="348"/>
+                                        <rect key="frame" x="8" y="0.0" width="304" height="304"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="wOa-CL-T0W" secondAttribute="height" multiplier="1:1" id="Yzm-pl-OQy"/>
                                         </constraints>
                                     </view>
                                     <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GeZ-wd-uBD">
-                                        <rect key="frame" x="0.0" y="119" width="320" height="110"/>
+                                        <rect key="frame" x="0.0" y="97" width="320" height="110"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="GeZ-wd-uBD" secondAttribute="height" multiplier="32:11" id="ELb-jC-hTg"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vA2-6o-xIQ">
-                                        <rect key="frame" x="139" y="144" width="42" height="60"/>
+                                        <rect key="frame" x="139" y="122" width="42" height="60"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgm-dZ-tx6">
                                                 <rect key="frame" x="5" y="-1" width="32" height="22"/>
@@ -792,14 +792,14 @@
                                         </constraints>
                                     </view>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tsu-W6-Fua">
-                                        <rect key="frame" x="100" y="114" width="120" height="120"/>
+                                        <rect key="frame" x="100" y="92" width="120" height="120"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="tsu-W6-Fua" secondAttribute="height" multiplier="1:1" id="8Bb-kh-ION"/>
                                             <constraint firstAttribute="height" constant="120" id="CgV-eh-oPJ"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pdP-PT-gBJ" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
-                                        <rect key="frame" x="8" y="8" width="304" height="332"/>
+                                        <rect key="frame" x="8" y="8" width="304" height="288"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLo-Oz-9ew">
                                         <rect key="frame" x="243" y="10" width="67" height="57"/>
@@ -2292,6 +2292,10 @@
                                     <constraint firstAttribute="trailing" secondItem="JoS-fD-ljp" secondAttribute="trailing" id="yLK-Jp-MWL"/>
                                 </constraints>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dm2-47-brv" customClass="GZEEditButton" customModule="Gooze" customModuleProvider="target">
+                                <rect key="frame" x="274" y="80" width="30" height="30"/>
+                                <state key="normal" title="Edit"/>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yrh-cI-kqX" customClass="GZEButton" customModule="Gooze" customModuleProvider="target">
                                 <rect key="frame" x="110" y="521" width="100" height="32"/>
                                 <color key="backgroundColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2307,10 +2311,12 @@
                             <constraint firstItem="gnQ-48-oJQ" firstAttribute="leading" secondItem="any-jm-akY" secondAttribute="leading" id="GUo-D0-B2I"/>
                             <constraint firstAttribute="trailing" secondItem="NKx-Uv-zYQ" secondAttribute="trailing" id="Jw9-lS-zkh"/>
                             <constraint firstItem="WKe-nt-VYt" firstAttribute="top" secondItem="fbs-it-s4n" secondAttribute="bottom" id="KBC-US-eHD"/>
+                            <constraint firstItem="Dm2-47-brv" firstAttribute="top" secondItem="fbs-it-s4n" secondAttribute="bottom" constant="16" id="LJC-gJ-WxH"/>
                             <constraint firstAttribute="bottom" secondItem="Yrh-cI-kqX" secondAttribute="bottom" constant="15" id="P6Y-Xp-TOe"/>
                             <constraint firstAttribute="trailing" secondItem="gnQ-48-oJQ" secondAttribute="trailing" id="RRG-SW-WaE"/>
                             <constraint firstItem="NKx-Uv-zYQ" firstAttribute="top" secondItem="fbs-it-s4n" secondAttribute="bottom" id="VhB-RY-FWV"/>
                             <constraint firstItem="Yrh-cI-kqX" firstAttribute="centerX" secondItem="any-jm-akY" secondAttribute="centerX" id="Wce-0B-6fw"/>
+                            <constraint firstAttribute="trailing" secondItem="Dm2-47-brv" secondAttribute="trailing" constant="16" id="X6C-KK-Ncj"/>
                             <constraint firstAttribute="bottom" secondItem="gnQ-48-oJQ" secondAttribute="bottom" id="ZwM-IU-EVs"/>
                             <constraint firstAttribute="trailing" secondItem="WKe-nt-VYt" secondAttribute="trailing" id="dKQ-dn-F5N"/>
                             <constraint firstItem="2b2-co-G8p" firstAttribute="top" secondItem="WKe-nt-VYt" secondAttribute="bottom" id="jzD-2t-kJh"/>
@@ -2324,6 +2330,7 @@
                         <outlet property="ageButton" destination="BUI-SF-fo1" id="lhl-Ab-7OC"/>
                         <outlet property="ageLabel" destination="jSL-WM-lJh" id="htl-aZ-5aM"/>
                         <outlet property="contactButton" destination="Yrh-cI-kqX" id="wAt-1Z-bo0"/>
+                        <outlet property="editButton" destination="Dm2-47-brv" id="5fR-Cg-BtS"/>
                         <outlet property="genderButton" destination="E2o-kf-Sfe" id="sfV-gV-wXO"/>
                         <outlet property="genderLabel" destination="H1O-Ob-943" id="n70-Bk-OuY"/>
                         <outlet property="heightButton" destination="aTi-29-v1G" id="W16-3t-CSV"/>
@@ -2340,11 +2347,12 @@
                         <outlet property="usernameLabel" destination="krc-nd-Zhp" id="aRf-8M-Bnp"/>
                         <outlet property="weightButton" destination="Wg7-rU-Mup" id="P8a-RO-swd"/>
                         <outlet property="weightLabel" destination="ifA-s3-fig" id="bcg-4S-YVw"/>
+                        <segue destination="2xt-bn-0V0" kind="show" identifier="segueToUpdateProfile" id="Dk2-YI-miw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l0d-qF-Jxk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1620" y="1298"/>
+            <point key="canvasLocation" x="1620" y="1297.1830985915492"/>
         </scene>
         <!--Gallery View Controller-->
         <scene sceneID="6DK-Bw-ckL">
@@ -3312,6 +3320,7 @@
         <segue reference="ZKk-02-86h"/>
         <segue reference="XJg-fM-c9J"/>
         <segue reference="be1-y5-0kc"/>
+        <segue reference="Dk2-YI-miw"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
